overflow fixes

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 body {
-  overflow: hidden;
+  /* overflow: hidden; */
   margin: 0;
 }
 
